--- a/src/css/Topbar.css
+++ b/src/css/Topbar.css
@@ -25,12 +25,12 @@
 }
 
 .user-avatar {
-    width: 40px;
+    width: 50px;
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
     background-image: url('../img/user.png');
-    background-size: cover;
+    background-size: contain;
     position: relative;
 }
 
@@ -89,11 +89,12 @@
     flex-direction: column;
     align-items: center;
     color:#fff;
-    background-color: #243340; 
+   /* background-color: #243340; 
   padding: 10px;
   border-radius: 8px; 
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); 
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  */
   }
   .brand-content {
     display: flex;
