--- a/src/css/Topbar.css
+++ b/src/css/Topbar.css
@@ -15,23 +15,24 @@
 .user-info {
     display: flex;
     align-items: center;
-    margin-right: 10px;
+    margin-right: 10%;
 }
 
 .user-name {
     display: flex;
     align-items: center;
-    margin-right: 10px;
+    margin-right: 1%;
+    width: 100%;
 }
 
 .user-avatar {
-    width: 50px;
-    height: 40px;
+    width: 4.5rem;
+    height: 3rem;
     border-radius: 50%;
     margin-right: 10px;
     background-image: url('../img/user.png');
-    background-size: contain;
-    position: relative;
+    background-size: cover;
+    position: center;
 }
 
 .notifications {
