--- a/src/css/general.css
+++ b/src/css/general.css
@@ -14,6 +14,8 @@
   .title{
     margin-left: 40px;
     margin-top: 20px;
+    color: #243340;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   }
   
   .btn-crear {
@@ -61,4 +63,41 @@
   }
 .react-datepicker-popper{
   z-index: 2 !important;
+}
+
+.GrupoFiltro {
+  background: linear-gradient(to left, white 50%, #f2f2f2 50%);
+  background-position: right bottom;
+  background-size: 200% 100%;
+  transition: all 0.5s ease-out;
+  transition-timing-function: linear;
+}
+
+.GrupoFiltro:hover {
+  background-position: left bottom;
+}
+
+.contenedorFiltro {
+  width: 0%;
+  position: relative;
+  left: -300px; /* Posición inicial fuera de la pantalla */
+  transition: left 1s ease; /* Transición de la propiedad left más lenta */
+}
+
+.contenedorFiltro.mostrar {
+  left: 0; /* Posición final en la pantalla */
+  width: 20%;
+  height: 400px; /* Establece la altura deseada aquí */
+  overflow: auto;
+}
+
+.h4Estilo{
+  color: #9E0000;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px; /* Bordes redondeados */
 }
