--- a/src/css/general.css
+++ b/src/css/general.css
@@ -71,6 +71,7 @@
   background-size: 200% 100%;
   transition: all 0.5s ease-out;
   transition-timing-function: linear;
+  z-index: 20 !important;
 }
 
 .GrupoFiltro:hover {
