Mejoras filtro búsqueda y parámetros para bitácora
Se agregan validaciones para filtro de búsqueda y se corrige bug visual de select sobre datepicker. También, se agregan parámetros en llamados a API de catálogos, con el fin de usarlos en bitácora

--- a/src/css/general.css
+++ b/src/css/general.css
@@ -65,11 +65,20 @@
     align-content: center;
     align-items: center;
   }
+
 .react-datepicker-popper{
   z-index: 2 !important;
 }
 
 .GrupoFiltro {
+  background: linear-gradient(to left, white 50%, #f2f2f2 50%);
+  background-position: right bottom;
+  background-size: 200% 100%;
+  transition: all 0.5s ease-out;
+  transition-timing-function: linear;
+}
+
+.GrupoFiltroAdmRoles{
   background: linear-gradient(to left, white 50%, #f2f2f2 50%);
   background-position: right bottom;
   background-size: 200% 100%;
