agregar clase para corregir select index en usuario

--- a/src/css/general.css
+++ b/src/css/general.css
@@ -92,6 +92,10 @@
   z-index: 20 !important;
 }
 
+.grupoFiltroPosicion{
+  z-index: 20 !important;
+}
+
 .GrupoFiltro:hover {
   background-position: left bottom;
 }
